prevent overflow

--- a/_sass/layout/_banner.scss
+++ b/_sass/layout/_banner.scss
@@ -111,7 +111,7 @@
 			}
 
 			h2 {
-				font-size: 1.5em;
+				font-size: 1.35em;
 			}
 
 			p {
