--- a/_sass/layout/_menu.scss
+++ b/_sass/layout/_menu.scss
@@ -43,7 +43,7 @@
 			max-width: 100%;
 			opacity: 0;
 			position: relative;
-			width: 18em;
+			width: 15em;
 		}
 
 		h2 {
@@ -83,7 +83,7 @@
 					display: block;
 					font-family: _font(family-heading);
 					font-size: 0.8em;
-					font-weight: _font(weight-heading);
+					font-weight: _font(weight-heading-bold);
 					letter-spacing: _font(kern-heading);
 					line-height: 1.85em;
 					padding: 0.75em 0;
